# Search-Algorithms

./: AStar.cpp  AStar.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFS.cpp  BreadthFS.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  Dfs.cpp  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.cpp  ISearcher.h  Matrix.h  Matrix1.txt  Matrix2.txt  Matrix3.txt  Matrix4.txt  Matrix5.txt  Matrix6.txt  Matrix7.txt  Matrix8.txt  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  PriorityQueue.h  README.md  Searchable.h  Searcher.cpp  (+14 more)
